openshift-assets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whisperwealth
  labels:
    app: whisperwealth
